Adds /about page

--- a/config.toml
+++ b/config.toml
@@ -19,8 +19,8 @@ pygmentscodefencesguesssyntax = true
     author = "Guillermo Estrada"
     info = "Full Stack Developer and Generative Artist (in progress...)"
     description = "Guillermo Estrada Dev Blog"
-    keywords = "dev,blog,developer,golang,js,algorithms,generative art"
-    gravatar = "phrzn@live.com"
+    keywords = "dev,blog,developer,go,golang,js,javascript,algorithms,generative art"
+    avatarURL = "/images/avatar.jpg"
     footercontent = "Daydreamer, analytical brainiac, shameless romantic, factual magician, practical poet, irrational empath, generative artist, ninja coder and mind reader."
     repo = "phrozen/gestrada.dev"
     colorScheme = "auto"
